# DiffiT-v2

./: .gitignore  ANALYSIS.md  BUGFIXES.md  CHANGELOG.md  FIXES_APPLIED.md  QUICK_START.md  README.md  README_FIXES.md  TRAINING_256_GUIDE.md  dataset_tool.py  dataset_tool_for_imagenet.py  diffit.ipynb  download_models.py  download_models.sh  eval_run.sh  evaluator.py  gen_images.py  generate.py  pyproject.toml  requirements.txt  run_train.sh  sample.py  slurm_sample_256.sh  slurm_sample_512.sh  slurm_train_4_gpu.sh  test_diffit.py  train.py  train_1_gpu_256x256.sbatch  train_2h200_1024x1024_prod.sbatch  train_2h200_256x256_prod.sbatch  train_2h200_512x512_prod.sbatch  train_4h200_1024x1024_prod.sbatch  train_hydra.py  train_imagenet256_h200.sh
configs/: __init__.py  config.yaml
diffit/: __init__.py  constants.py  diffit.py  dist_util.py  dpm_solver.py  gaussian_diffusion.py  image_datasets.py  inception.py  logger.py  metrics.py  pos_emb.py  script_util.py  unipc_solver.py
diffusion/: __init__.py  diffusion.py  schedule.py
dnnlib/: __init__.py  util.py
experiments/: README.md  analyze_sample_split.py  train_sample_split.py
experiments/logs/: slurm_3895929.out
experiments/notebooks/: analyze_sample_split.ipynb  generate_class_samples.ipynb  generate_class_samples.py
experiments/sbatch/: analyze.sbatch  train_1024_splitA.sbatch  train_1024_splitB.sbatch  train_256_splitA.sbatch  train_256_splitB.sbatch  train_512_splitA.sbatch  train_512_splitB.sbatch
experiments/shell/: analyze.sh  train_1024_splitA.sh  train_1024_splitB.sh  train_256_splitA.sh  train_256_splitB.sh  train_512_splitA.sh  train_512_splitB.sh
metrics/: __init__.py  frechet_inception_distance.py  metric_main.py  metric_utils.py
models/: __init__.py  attention.py  attention_improved.py  diffit.py  vit.py
plugins/: __init__.py
sbatch/: README.md  generate_2_gpu_256x256.sbatch  generate_2_gpu_512x512.sbatch  h200_compare_samplers_256x256.sbatch  h200_train_2_gpu_1024x1024.sbatch  h200_train_2_gpu_256x256.sbatch  h200_train_2_gpu_512x512.sbatch  list_scripts.sh
sbatch/a100/: generate_1_gpu_256x256.sbatch  generate_1_gpu_512x512.sbatch  generate_256x256.sbatch  generate_specific_class.sbatch  sample_4_gpu_256x256.sbatch  sample_4_gpu_512x512.sbatch  train_1_gpu_256x256.sbatch  train_2_gpu_1024x1024.sbatch  train_2_gpu_256x256.sbatch  train_2_gpu_512x512.sbatch  train_2gpu_128x128.sbatch  train_2gpu_256x256.sbatch  train_2gpu_512x512.sbatch  train_2gpu_64x64.sbatch
sbatch/h200/: generate_256x256.sbatch  generate_2_gpu_256x256.sbatch  (+18 more)
scripts/: __init__.py  compare_samplers.py  dataset_tool_for_imagenet.py  download_models.py  evaluator.py  gen_images.py  sample.py  train.py
sh/: generate_1024.sh  generate_256.sh  generate_512.sh  train_1024.sh  train_256.sh  train_512.sh
tests/: test_smoke.py
torch_utils/: __init__.py  custom_ops.py  misc.py  persistence.py  training_stats.py
training/: __init__.py  dataset.py  loss.py  training_loop.py
(+3 files in other folders)
