[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diffit"
version = "3.0.0"
description = "DiffiT: Diffusion Vision Transformers for Image Generation (v2 performance refresh)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "NVIDIA Source Code License-NC" }
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=1.0.11",
    "diffusers>=0.26.3",
    "tqdm>=4.64.1",
    "click>=8.0",
    "numpy>=1.24.0",
    "Pillow>=9.0",
    "safetensors>=0.3.0",
    "scipy>=1.10.0,<=1.14.1",
    "accelerate>=0.27.2",
    "tensorboard>=2.14.0",
    "psutil>=5.9.0",
    "h5py>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]
# Optional: enables combra.metrics.compute_all_metrics during training-time eval.
# Training runs unchanged without it (the import is guarded). combra is pulled
# from its private repo over git+https -- the single combra source shared by all
# four v2 repos -- and its base deps cover every image metric: FID (pytorch-fid),
# CLIP-MMD (open-clip-torch) and FD-DINOv2 (torch.hub DINOv2).
combra = [
    "combra @ git+https://github.com/dkagramanyan/combra.git",
]

# Console entry-points. After `pip install -e .` these are available on PATH.
# diffit-sample is a legacy bulk-.npz sampler (upstream-paper FID protocol only);
# it falls outside the v2 generation contract and carries no contract guarantees.
[project.scripts]
diffit-train = "scripts.train:main"
diffit-sample = "scripts.sample:generate_samples"
diffit-gen-images = "scripts.gen_images:generate_images"
diffit-compare-samplers = "scripts.compare_samplers:main"
diffit-eval = "scripts.evaluator:main"
diffit-prepare-data = "scripts.dataset_tool_for_imagenet:prepare_data"
diffit-download-models = "scripts.download_models:main"

[tool.setuptools]
packages = ["diffit", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"
# experiments/ is research scratch code; don't hold it to the same bar.
extend-exclude = ["experiments"]

[tool.ruff.lint]
# Pragmatic set for a research codebase: pyflakes (F, real problems) and import
# sorting (I). pycodestyle style noise (E4/E7 multi-statement, import position)
# is intentionally not enforced — those patterns are common in ML entry scripts.
select = ["F", "I"]

[tool.ruff.lint.isort]
# Keep multiple aliased imports from one module in a single grouped statement
# (e.g. the guarded combra.metrics import in diffit/metrics.py) instead of
# exploding them into one `from x import (y as z)` line each.
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# dpm_solver keeps a couple of named log-SNR intermediates for readability of
# the sampling math even though they are not all consumed.
"diffit/dpm_solver.py" = ["F841"]
